--- a/sample.env
+++ b/sample.env
@@ -1,16 +1,16 @@
 # Konfigurasi Bot Telegram
-BOT_TOKEN=YOUR_BOT_TOKEN_HERE
+BOT_TOKEN=7742774708:AAHIYFQr5OezJ53TtnLoC6oqYeI2BoBsym8
 
 # Konfigurasi MongoDB
-MONGO_URI=mongodb://your_mongo_uri_here/your_db_name
-DATABASE_NAME=nama_database_bot_anda
+MONGO_URI=mongodb+srv://renkaji:renkaji@cluster0.6wfinis.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_NAME=gikes
 
 # Konfigurasi API Telegram (untuk Pyrogram)
-API_ID=YOUR_API_ID
-API_HASH=YOUR_API_HASH
+API_ID=23029060
+API_HASH=141c4d3db0ce4ba892b477f9b06cdb92
 
 # User ID Pemilik Bot (untuk kontrol akses)
-OWNER_ID=YOUR_OWNER_ID
+OWNER_ID=1635598010
 
 # Anda dapat menambahkan variabel lingkungan lain jika diperlukan
 # CONTOH_VARIABEL=nilai_lain
