--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-BOT_TOKEN=YOUR_BOT_TOKEN_HERE
-API_ID=YOUR_API_ID
-API_HASH=YOUR_API_HASH
-MONGO_URI=mongodb://your_mongo_uri_here/your_db_name
-DATABASE_NAME=nama_database_bot_anda
-OWNER_ID=YOUR_OWNER_ID
+BOT_TOKEN=7742774708:AAHIYFQr5OezJ53TtnLoC6oqYeI2BoBsym8
+API_ID=23029060
+API_HASH=141c4d3db0ce4ba892b477f9b06cdb92
+MONGO_URI=mongodb+srv://renkaji:renkaji@cluster0.6wfinis.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_NAME=gikes
+OWNER_ID=1635598010
